[gd_scene load_steps=4 format=3 uid="uid://c8k2j5m3n4p6q"]

[ext_resource type="Script" uid="uid://bcmbp5tdari5w" path="res://Autoloads/pause_menu.gd" id="1_pause"]
[ext_resource type="PackedScene" uid="uid://bduoje786xe67" path="res://Scenes/UI/settings_menu.tscn" id="2_settings"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_pause")

[node name="PauseMenu" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Retornar"

[node name="ResetLevelButton" type="Button" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Reiniciar Nivel"

[node name="SettingsButton" type="Button" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Opciones"

[node name="SaveQuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Guardar y Salir"

[node name="MainMenuButton" type="Button" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Ir al Men√∫ Principal"

[node name="SettingsMenu" parent="." instance=ExtResource("2_settings")]
visible = false
